fix: city-select when enable dark mode

--- a/src/assets/css/Weather.scss
+++ b/src/assets/css/Weather.scss
@@ -73,4 +73,9 @@
       color: #fefefe
     }
   }
+
+  .city-select {
+    background-color: #212529 !important;
+    color: #fefefe !important;
+  }
 }
